--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: "Noto Sans CJK KR Regular";
-  font-size: 13px;
+  /* font-family: "Noto Sans CJK KR Regular"; */
+  font-family: "JetBrains Mono Nerd Font";
+  font-size: 12px;
   min-height: 0;
 }
 
 window#waybar {
-  background: transparent;
+  /* background: rgba(25, 23, 36, 0.85); */
+  background-image: linear-gradient(to left, rgba(155, 23, 36, 0.85) 0%, rgba(25, 23, 146, 0.85) 100%);
   /*    background-color: rgba(43, 48, 59, 0.5); */
   /*    border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
   color: #ffffff;
   transition-property: background-color;
   transition-duration: .5s;
+  /* border-radius: 5px; */
+  border: 1px solid #1f1d2e;
+
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 window#waybar.hidden {
@@ -22,18 +29,27 @@ window#waybar.hidden {
   background-color: transparent;
 }
 
-#workspaces {
-    color: #ffffff;
-    opacity: 1;
+#workspaces{
+  margin: 0 2px;
+  padding-left: 8px;
+  padding-right: 8px;
+  background-color: rgba(0,0,0,0.3);
+  font-size:10px;
+  font-weight: bold;
+  /* border-radius: 2px; */
+
 }
 
+
 #window {
-  margin: 2;
+  margin: 2px;
   padding-left: 8;
   padding-right: 8;
   background-color: rgba(512,0,0,0.3);
-  font-size:14px;
+  font-size:10px;
   font-weight: bold;
+
+  border-radius: 2px;
 }
 
 button {
@@ -53,17 +69,23 @@ button:hover {
 #workspaces button {
   padding: 0 4px;
   /*    background-color: rgba(0,0,0,0.3); */
+  color: #ffffff;
+  border-radius: 2px;
+  border: 1px solid transparent;
+  /* border-color: red; */
+  margin: 0px 2px;
 }
 
 #workspaces button:hover {
-    color:#c9545d;
+    color: rgba(255,0,0,.5);
 }
 
 #workspaces button.focused {
   /*    box-shadow: inset 0 -2px #c9545d; */
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(255,0,0,1);
   color:#c9545d;
-  border-top: 2px solid #c9545d;
+  border: 2px solid #c9545d;
+  border-radius: 2px;
 }
 
 #workspaces button.urgent {
@@ -96,11 +118,12 @@ button:hover {
   padding-right: 4px;
   background-color: rgba(0,0,0,0.3);
   color: #ffffff;
+  border-radius: 2px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-  margin-left: 0;
+  margin-left: 2px;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
@@ -109,7 +132,7 @@ button:hover {
 }
 
 #clock {
-  font-size:14px;
+  font-size:10px;
   font-weight: bold;
 }
 
