--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 window#waybar {
-  /* background: rgba(25, 23, 36, 0.85); */
+background: transparent;
   background-image: linear-gradient(to left, rgba(155, 23, 36, 0.85) 0%, rgba(25, 23, 146, 0.85) 100%);
   /*    background-color: rgba(43, 48, 59, 0.5); */
   /*    border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
@@ -15,10 +15,19 @@ window#waybar {
   transition-property: background-color;
   transition-duration: .5s;
   /* border-radius: 5px; */
-  border: 1px solid #1f1d2e;
+  border: 1px;
 
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+  /* border-bottom-left-radius: 5px; */
+  /* border-bottom-right-radius: 5px; */
+  animation: myanimation 8s infinite;
+}
+
+@keyframes myanimation {
+ 0% {background-image: linear-gradient(to left, rgba(155, 23, 36, 0.85) 0%, rgba(25, 23, 146, 0.85) 100%);}
+  25% {background-image: linear-gradient(to left, rgba(25, 23, 146, 0.85) 0%, rgba(155, 23, 36, 0.1) 100%);}
+  50% {background-image: linear-gradient(rgba(155, 23, 36, 0.85) 0%, rgba(25, 23, 146, 0.1) 100%);}
+  75% {background-image: linear-gradient(rgba(25, 23, 146, 0.85) 0%, rgba(155, 23, 36, 0.1) 100%);}
+ 100% {background-image: linear-gradient(to left, rgba(155, 23, 36, 0.85) 0%, rgba(25, 23, 146, 0.85) 100%);}
 }
 
 window#waybar.hidden {
@@ -30,7 +39,7 @@ window#waybar.hidden {
 }
 
 #workspaces{
-  margin: 0 2px;
+  margin: 2px;
   padding-left: 8px;
   padding-right: 8px;
   background-color: rgba(0,0,0,0.3);
@@ -45,19 +54,20 @@ window#waybar.hidden {
   margin: 2px;
   padding-left: 8;
   padding-right: 8;
-  background-color: rgba(512,0,0,0.3);
+  background: transparent;
   font-size:10px;
   font-weight: bold;
 
-  border-radius: 2px;
+  /* border-radius: 2px; */
+  animation: myanimation 5s  infinite;
 }
 
 button {
   /* Use box-shadow instead of border so the text isn't offset */
   box-shadow: inset 0 -3px transparent;
   /* Avoid rounded borders under each button name */
-  border: none;
-  border-radius: 0;
+  /* border: none; */
+  /* border-radius: 0; */
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
@@ -70,7 +80,7 @@ button:hover {
   padding: 0 4px;
   /*    background-color: rgba(0,0,0,0.3); */
   color: #ffffff;
-  border-radius: 2px;
+  /* border-radius: 2px; */
   border: 1px solid transparent;
   /* border-color: red; */
   margin: 0px 2px;
@@ -78,18 +88,20 @@ button:hover {
 
 #workspaces button:hover {
     color: rgba(255,0,0,.5);
+  border: 2px;
+  border-image: linear-gradient(rgba(155, 23, 36, 0.85) 0%, rgba(25, 23, 146, 0.85) 100%);
 }
 
 #workspaces button.focused {
   /*    box-shadow: inset 0 -2px #c9545d; */
-  background-color: rgba(255,0,0,1);
-  color:#c9545d;
-  border: 2px solid #c9545d;
-  border-radius: 2px;
+  background-color: rgba(0,0,0,1);
+  color: black;
+  border: 2px solid black;
+  /* border-radius: 2px; */
 }
 
 #workspaces button.urgent {
-  background-color: #eb4d4b;
+  background-color: black;
 }
 
 #mode {
@@ -118,7 +130,7 @@ button:hover {
   padding-right: 4px;
   background-color: rgba(0,0,0,0.3);
   color: #ffffff;
-  border-radius: 2px;
+  /* border-radius: 2px; */
 }
 
 /* If workspaces is the leftmost module, omit left margin */
