--- a/style.css
+++ b/style.css
@@ -22,12 +22,13 @@ background: transparent;
   animation: myanimation 8s infinite;
 }
 
+/* background: linear-gradient(90deg, rgba(176,11,105,1) 0%, rgba(5,0,255,1) 50%, rgba(0,255,194,1) 100%);  */
+
 @keyframes myanimation {
- 0% {background-image: linear-gradient(to left, rgba(155, 23, 36, 0.85) 0%, rgba(25, 23, 146, 0.85) 100%);}
-  25% {background-image: linear-gradient(to left, rgba(25, 23, 146, 0.85) 0%, rgba(155, 23, 36, 0.1) 100%);}
-  50% {background-image: linear-gradient(rgba(155, 23, 36, 0.85) 0%, rgba(25, 23, 146, 0.1) 100%);}
-  75% {background-image: linear-gradient(rgba(25, 23, 146, 0.85) 0%, rgba(155, 23, 36, 0.1) 100%);}
- 100% {background-image: linear-gradient(to left, rgba(155, 23, 36, 0.85) 0%, rgba(25, 23, 146, 0.85) 100%);}
+  0% {background: radial-gradient(circle, rgba(176,11,105,1) 0%, rgba(5,0,255,1) 50%, rgba(0,255,194,1) 100%);}
+  25% {background: radial-gradient(circle, rgba(5,0,255,1) 0%,  rgba(0,255,194,1) 50%,  rgba(176,11,105,1) 100%);}
+  75% {background: radial-gradient(circle, rgba(0,255,194,1) 0%,  rgba(176,11,105,1)  50%, rgba(5,0,255,1) 100%);}
+  100% {background: radial-gradient(circle, rgba(176,11,105,1) 0%, rgba(5,0,255,1) 50%, rgba(0,255,194,1) 100%);}
 }
 
 window#waybar.hidden {
